# qprocessor

./: README.md  qprocessor.cabal  quantum.cabal
src/Quantum/: QProcessor.hs
src/Quantum/QProcessor/: Gate.hs  Internal.hs  Manipulator.hs
test/: TestUtils.hs
test/Quantum/: QProcessorSpec.hs
test/Quantum/QProcessor/: GateSpec.hs  InternalSpec.hs  ManipulatorSpec.hs
