name:                qprocessor
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Quantum.QProcessor
                     , Quantum.QProcessor.Gate
                     , Quantum.QProcessor.Internal
                     , Quantum.QProcessor.Manipulator
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , operational
                     , random
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror -O
  default-language:    Haskell2010

test-suite qprocessor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestUtils
                     , Quantum.QProcessorSpec
                     , Quantum.QProcessor.GateSpec
                     , Quantum.QProcessor.InternalSpec
                     , Quantum.QProcessor.ManipulatorSpec
  build-depends:       base >= 4.7 && < 5
                     , hspec == 2.*
                     , qprocessor
                     , mtl
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
